# voiceping-ios-android-offline-speech-translation

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  NOTICE  README.md  project.local.yml.example  project.yml
.github/workflows/: android-build.yml  build.yml  ios-build.yml
BroadcastUploadExtension/: Info.plist  SampleHandler.swift
LocalPackages/SherpaOnnxKit/: Package.swift
OfflineTranscription/: OfflineTranscription.entitlements
OfflineTranscription/App/: OfflineTranscriptionApp.swift
OfflineTranscription/Constants/: AudioConstants.swift
OfflineTranscriptionAndroid/: settings.gradle.kts  setup-deps.sh
OfflineTranscriptionAndroid/app/src/main/cpp/: CMakeLists.txt
OfflineTranscriptionTests/: DataPersistenceTests.swift  ErrorHandlingTests.swift  ModelLifecycleTests.swift  SessionStateTests.swift  StressTests.swift  TranscriptionPipelineTests.swift  ViewModelTests.swift  WhisperServiceTests.swift
OfflineTranscriptionUITests/: AllModelsE2ETest.swift  UserFlowUITests.swift
Shared/: DarwinNotifications.swift  SharedAudioRingBuffer.swift
VoicePingIOSAndroidOfflineSpeechTranslationAndroid/: settings.gradle.kts
WindowsOfflineSpeechTranslation/: DEVICE_TESTING.md  Dockerfile.tests  OfflineSpeechTranslation.sln  README.md  capture-all.ps1  run.bat  setup-dev.ps1
scripts/: android-e2e-test.sh  android-userflow-test.sh  ci-android-unit-test.sh  ci-ios-unit-test.sh  generate-inference-report.py  generate-ios-project.sh  ios-e2e-test.sh  ios-ui-flow-tests.sh  prepare-long-eval-audio.sh  run-inference-benchmarks.sh  setup-ios-deps.sh
(+227 files in other folders)
